force-app/main/default/objects/Historian_Field_Config__mdt/Historian_Field_Config__mdt.object-meta.xml
<CustomObject>
    <label>Historian Field Config</label>
    <pluralLabel>Historian Field Configs</pluralLabel>
</CustomObject>