force-app/main/default/objects/Historian_Field_Config__mdt/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <label>Field API Name</label>
    <required>true</required>
    <type>Text</type>
    <length>100</length>
</CustomField>