force-app/main/default/objects/Historian_Field_Config__mdt/fields/Include__c.field-meta.xml
<CustomField>
    <fullName>Include__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include</label>
    <type>Checkbox</type>
</CustomField>