force-app/main/default/objects/Historian_Field_Config__mdt/fields/Parent_Config__c.field-meta.xml
<CustomField>
    <fullName>Parent_Config__c</fullName>
    <label>Parent Config</label>
    <required>true</required>
    <type>MetadataRelationship</type>
    <referenceTo>Historian_Config__mdt</referenceTo>
    <relationshipName>Parent_Config</relationshipName>
</CustomField>